--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name"                             : "@mineui/tokens",
-	"version"                          : "0.0.1",
-	"description"                      : "tokens",
+	"version"                          : "0.0.3",
+	"description"                      : "350+ design tokens for modern UI systems—colors, spacing, typography, shadows, and more in HSL format",
 	"keywords"                         : ["mine", "ui", "tokens"],
 	"license"                          : "MIT",
 	"homepage"                         : "https://github.com/mineui-org/tokens#readme",
